# OxideWM

./: .gitignore  Cargo.toml  Makefile  Manual Tests.md  README.md  async.md  bar_config.yml  build.rs  config.yml  debug  meta_config.yml  run_oxidewm.sh  runx.sh  test.sh  xinitrc
.github/workflows/: Rust-Clippy-Check.yml  rust.yml  rust_test.yml
common/: Cargo.toml
common/src/: lib.rs
common/src/ipc/: mod.rs
common/src/logging/: teelogger.rs
concepts/: XCB.md  async.md  config_files.md  depencies.md  ipc.md  keyboard_input.md  reactiveness.md  rust.md
concepts/ipc/: ipc_features.md  ipc_lib.md  ipc_soltuion.md
docs/: Makefile  README.md  dbus-interface.md  index.rst  oxide-keybinds.md  oxide-msg.md  testing-oxide.rst  testing_oxide.md
docs/config/: config.md
docs/intro/: concepts.md  installation.rst
docs/source/: 01_about.rst  021_concepts.rst  022_customer_specification.rst  023_technical_specification.rst  024_work_package_plan.rst  025_tests.rst  02_project_procedure.rst  031_components_behavior.rst  032_flowcharts.rst  0330_general.rst  0331_eventhandler.rst  0332_logging.rst  0333_screeninfo.rst  0334_setup.rst  0335_windowmanager.rst  0336_workspace.rst  0337_config.rst  033_class_diagrams.rst  03_diagrams.rst  041_installation.rst  042_config.rst  04_using_oxide.rst  components_behavior.rst  concepts.rst  conf.py  config.rst  general.rst  index.rst  installation.rst
docs/source/01_about/: 011_about.rst  012_dbus.rst  01_about.rst  01_index.rst
docs/source/03_diagrams/: 03_index.rst  (+2 more)
docs/templates/: class_dg_blank.rst  class_dg_figure.rst  class_dg_index.rst
examples/: .window_with_frame.rs.rustfmt  arc.rs  bar_modules.rs  bindings.rs  channel_thread_queue.rs  config.yml  config_man_page.md  config_parser.rs  event_handler.rs  fullscreen_window.rs  keybindings.rs  keybindings_window.rs  keycodes_xmodmap.rs  new_config.yml  parse_enums.rs  run_window_with_frame.sh  syslog.rs  testing_error_checker.rs  window.rs  window_state.rs  window_with_frame.rs  workspace.rs  xinitrc_window_with_frame  yaml_rust.rs  zbus_client.rs  zbus_server.rs
examples/keybindings/: event_handler.rs  keybindings.rs  keybindings_window.rs  main.rs
extensions/common/: Cargo.toml
extensions/oxide-bar/: Cargo.toml
extensions/oxide-bar/src/: config.rs  main.rs
extensions/oxide-ipc/: Cargo.toml
extensions/oxide-ipc/src/: ipc.rs  lib.rs
extensions/oxide-msg/: Cargo.toml
good_to_know/: github_project.md  how_to.md  links.md  termine.md
man/: config.1  oxide-bar.1  oxide-config.1  oxide-msg.1  oxide-msg.md  oxide.1
man/src/: config.1.md  oxide-bar.1.md  oxide-config.1.md  oxide-msg.1.md  oxide.1.md
planning/: Critical_Technologies.md  Kritische_Technologie.md  Lastenheft.md  Personalplan.md  Personnel_plan.md  Personnel_planning.md  Product_concept_catalogue.md  Project_Handbook.md  Projekthandbuch.md  Schedule.md  Specifications.md  Zeitplan.md  critical_technologies.md  customer_specifications.md  performance_specifications.md  project_handbook.md  schedule.md  specifications.md  technical_specifications.md  workforce_planning.md
planning/source/: drawio_to_png.sh
research/: Cargo.toml  Makefile  gdb_practice.rs  list_dbus_modules.sh
research/src/: gdb_practice.rs  ipc_sample.rs  ips_sample.rs  main.rs
resources/: build_manpages.sh  config.yml  install_required_apps.sh  meta_config.yml  oxide.desktop  run_oxide.sh
src/: atom.rs  auxiliary.rs  commands.rs  common.rs  config.rs  config_error_checker.rs  constants.rs  frames.rs  ipc.rs  keybindings.rs  lib.rs  main.rs  screeninfo.rs  teelogger.rs  util.rs  windowmanager.rs  windowstate.rs  workspace.rs
src/config/: commands.rs  mod.rs
src/eventhandler/: commands.rs  events.rs  mod.rs
src/logging/: mod.rs  teelogger.rs
src/screeninfo/: error.rs  mod.rs
src/setup/: connection.rs
src/test/: mod.rs
src/windowmanager/: enums_windowmanager.rs  mod.rs  movement.rs  setup_connection.rs
src/workspace/: enum_workspace_layout.rs  enum_workspace_navigation.rs  enums.rs  enums_workspace.rs  mod.rs  parse_error.rs  workspace_layout.rs  workspace_navigation.rs
test/: config.rs  config_tests.rs  mod.rs  oxideipc_test.rs  screeninfo_tests.rs
test/resources/: Manual Tests.md  automated_test_log  automated_tests.py  automated_tests.sh  autotestrc  findings.md  manual_tests.md  oxidemsgrc  run_tests.sh  state_one  state_two  unittestrc  xinitrc
test/results/: findings.md  manual_tests.md
test/test_files/: config.yml  invalid_datatypes.yml  missing_values.yml
test_files/: config.yml
tools/lemon-bar/: Cargo.toml
tools/oxide-bar/: Cargo.toml  lemonbar
tools/oxide-bar/src/: bar_modules.rs  config.rs  config_parser.rs  main.rs  main_fix.rs  main_old.rs  main_x11rb.rs  xcb_visualtype.rs
tools/oxide-ipc/: Cargo.toml
tools/oxide-ipc-blocking/: Cargo.toml
tools/oxide-ipc/src/: events.rs  ipc.rs  ipc_blocking.rs  lib.rs  state.rs
tools/oxide-msg/: Cargo.toml  README.md
(+59 files in other folders)
