[package]
name = "oxidewm"
version = "0.1.0"
edition = "2021"
include = ["src/**/*", "Cargo.toml", "Cargo.lock", "README.md", "LICENSE"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
x11rb = "0.11.*"
thiserror = "1.0.*"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
lazy_static = "1.4.0"
