[package]
name = "oxide"
version = "0.1.0"
edition = "2021"
build = "build.rs"
include = ["src/**/*", "Cargo.toml", "Cargo.lock", "README.md", "LICENSE"]

[workspace]
members = ["tools/oxide-ipc", "tools/oxide-msg", "tools/oxide-bar"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
rudg = { git = "https://github.com/janschaible/rudg-fork", branch = "fix_label_escape" }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
sha256 = "1.1.*"

[dependencies]
x11rb = "0.11.*"
thiserror = "1.0.*"
serde = { version = "1.0", features = ["derive"] }
oxideipc = { version = "*", path = "tools/oxide-ipc" }
serde_yaml = "0.8"
serde_json = "1.0"
lazy_static = "1.4.0"
log = "0.4.0"
log4rs = "1.2.*"
syslog = "6.0.*"
anyhow = "1.0.*"
zbus = { version = "3", default-features = false, features = ["tokio"] }
async-std = { version = "1", features = ["attributes", "tokio1"] }
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"
