[package]
name = "oxide-bar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oxidewm = { version = "0.1.*", path = "../../" }
oxideipc = { version = "0.1.*", path = "../oxide-ipc" }
gtk = { version = "0.1", package = "gtk4" }
gdk-x11 = {version = "0.1", package = "gdk4-x11"}
gdk-x11-sys = {version = "0.1", package = "gdk4-x11-sys"}
gdk = {version = "0.1", package = "gdk4"}
