[package]
name = "oxide-bar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oxidewm = { version = "0.1.*", path = "../../" }
oxideipc = { version = "0.1.*", path = "../oxide-ipc" }
x11rb = "0.11.*"
