[package]
name = "oxide-bar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oxideipc = { version = "0.1.*", path = "../oxide-ipc" }
x11rb = { version = "0.11.*", features = ["allow-unsafe-code", "render"] }
cairo-rs = { version = "0.15.6", features = ["xcb"] }
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
log4rs = "1.2.*"
log = "0.4.0"
color-convert = "0.1.0"
